--- a/job-siege/src/LoginRegister/Login.css
+++ b/job-siege/src/LoginRegister/Login.css
@@ -32,6 +32,23 @@
   flex-direction: column;
 }
 
+.app-name-register{
+  height: 15vh;
+  width: 50vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.app-name-register p {
+  font-size: 5vh; 
+  font-weight: bold;
+  font-family: "Poppins", sans-serif;
+  text-align: center;
+  margin: 0;
+}
+
 .app-name p {
   font-size: 7vh;
   font-weight: bold;
@@ -41,21 +58,6 @@
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Preahvihear&display=swap");
-
-/* .app-name-subtitle {
-  height: 3vh;
-  width: 50vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-
-.app-name-subtitle p {
-  font-size: 1.5vh;
-  font-weight: 500;
-  font-family: "Preahvihear", sans-serif;
-} */
 
 .welcome-message {
   height: 15vh;
@@ -76,6 +78,21 @@
 .welcome-message .welcome-back p {
   font-size: 5vh;
   font-weight: 600;
+  margin: 0;
+}
+
+.get-started-now {
+  height: 0.5vh;
+  width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+}
+
+.get-started-now p {
+  font-size: 3vh;
+  font-weight: 500;
   margin: 0;
 }
 
