--- a/job-siege/src/HomePage/Home.css
+++ b/job-siege/src/HomePage/Home.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0;
   font-family: "Poppins", sans-serif;
@@ -13,8 +14,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: white;
-  padding: 14px 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 10px 20px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -67,12 +68,94 @@ body {
   color: #975842;
 }
 
-/* .mobile{
-    display: none;
+/* .... */
+
+.mobile {
+  display: none;
+}
+.hamburger {
+  display: none;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
 }
 
-@media (max-width: 768px) {
-    .desktop {
-        display: none;
-    }
-} */
+.hamburger .bar {
+  width: 30px;
+  height: 4px;
+  background-color: rgb(0, 0, 0);
+  margin: 3px 0;
+}
+
+.menu {
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menu.open {
+  display: flex;
+}
+
+.menu-item {
+  padding: 10px 0;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  transition: color 0.3s;
+}
+
+.menu-item:hover {
+  text-decoration: underline;
+  color: #975842;
+}
+
+@media (max-width: 880px) {
+  .mobile{
+    display: flex;
+    align-items: center;
+  }
+
+  .app{
+    font-size: 25px;
+  }
+
+  .username{
+    display: none;
+  }
+
+  .menu{
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    top: 60px; 
+    right: 20px; 
+    background-color: #535151;
+    border-radius: 5px;
+    z-index: 1;
+    padding: 10px; 
+  }
+
+  .menu.open{
+    display: flex;
+  }
+
+  .desktop{
+    display: none;
+  }
+
+  .lines{
+    margin: 0px 18px;
+  }
+
+  .app-logo {
+    height: 40px;
+    width: 40px;
+  }
+
+  .profile-pic{
+    margin: 0;
+  }
+}
