--- a/job-siege/src/HomePage/HeroSec.css
+++ b/job-siege/src/HomePage/HeroSec.css
@@ -31,6 +31,54 @@
   line-height: 1.6;
 }
 
+.track-it {
+  height: 9vh;
+  width: 10vw;
+  border: none;
+  border-radius: 0.5rem;
+  text-align: center;
+  cursor: pointer;
+  font-size: 1.5rem;
+  font-weight: 600;
+  background: linear-gradient(135deg, rgb(151, 88, 66), rgb(255, 207, 151));
+  color: white;
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.track-it:hover {
+  background: linear-gradient(135deg, rgb(255, 207, 151), rgb(151, 88, 66));
+  transform: translateY(-5px);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
+  color:ghostwhite;
+}
+
+@media (max-width: 768px) {
+  .track-it {
+    height: 7vh;
+    width: 40vw;
+    font-size: 1.2rem;
+  }
+
+  .track-it:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 7px 10px rgba(0, 0, 0, 0.2);
+  }
+}
+
+@media (max-width: 480px) {
+  .track-it {
+    height: 7vh;
+    width: 40vw;
+    font-size: 1rem;
+  }
+
+  .track-it:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 5px 8px rgba(0, 0, 0, 0.2);
+  }
+}
+
 @media (max-width: 880px) {
   .hero-text p {
     font-size: 1.5rem;
